2010-05-14  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Implementation of QtScript API that provide method to convert a value to an object.

        [Qt] QtScript is missing toObject API
        https://bugs.webkit.org/show_bug.cgi?id=36594

        * qt/api/qscriptengine.cpp:
        (QScriptEngine::toObject):
        * qt/api/qscriptengine.h:
        * qt/api/qscriptvalue.cpp:
        (QScriptValue::toObject):
        * qt/api/qscriptvalue.h:
        * qt/api/qscriptvalue_p.h:
        (QScriptValuePrivate::toObject):
        * qt/tests/qscriptengine/tst_qscriptengine.cpp:
        (tst_QScriptEngine::toObject):
        (tst_QScriptEngine::toObjectTwoEngines):
        * qt/tests/qscriptvalue/tst_qscriptvalue.cpp:
        (tst_QScriptValue::toObjectSimple):
        * qt/tests/qscriptvalue/tst_qscriptvalue.h:

Canonical link: https://commits.webkit.org/50651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59503 268f45cc-cd09-0410-ab3c-d52691b4dbfc