JavaScriptCore/qt/api/qscriptengine.h
@@ -46,6 +46,7 @@ public:
     void reportAdditionalMemoryCost(int cost);
 
     QScriptString toStringHandle(const QString& str);
+    QScriptValue toObject(const QScriptValue& value);
 
     QScriptValue nullValue();
     QScriptValue undefinedValue();
